do not allow to delete electricity price curves when they are used